# ds-hub

./: .buildinfo  README.md  cluster.html  genindex.html  graph_ds.html  index.html  main.py  objects.inv  openai.html  pandas.html  pyproject.toml  python_basic.html  python_env.html  requirements.txt  search.html  searchindex.js  sql_advanced.html  sql_basic.html  sql_exercise.html  uv.html  version_control.html
_sources/: cluster.ipynb  graph_ds.md  index.md  openai.md  pandas.ipynb  python_basic.md  python_env.md  sql_advanced.md  sql_basic.md  sql_exercise.md  uv.md  version_control.md
ds-book/: _config.yml  _toc.yml  openai.md  pandas.ipynb  python_basic.md  python_env.md  sql_advanced.md  sql_basic.md  uv.md
ds-book/_build/.doctrees/: cluster.doctree  environment.pickle  graph_ds.doctree  index.doctree  openai.doctree  pandas.doctree  python_basic.doctree  python_env.doctree  sql_advanced.doctree  sql_basic.doctree  sql_exercise.doctree  uv.doctree  version_control.doctree
ds-book/_build/html/: .buildinfo  cluster.html  genindex.html  graph_ds.html  index.html  objects.inv  openai.html  pandas.html  python_basic.html  python_env.html  search.html  searchindex.js  sql_advanced.html  sql_basic.html  sql_exercise.html  uv.html  version_control.html
ds-book/_build/html/_sources/: graph_ds.md  index.md  openai.md  pandas.ipynb  python_env.md  sql_advanced.md  sql_exercise.md  uv.md  version_control.md
ds-book/_build/jupyter_execute/: cluster.ipynb  pandas.ipynb  python_basic.ipynb
